# BenchMe

./: .gitignore  README.md  pyproject.toml
benchmark/: repository.py
core/: _automl.py  api.py  automl.py  preprocessing.py  runner.py
data/: domain.py  repository.py
examples/: 1.py  bench.py
utils/: helpers.py
