[project]
name = "benchme"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "autogluon-tabular[catboost,lightgbm,xgboost,fastai,ray,skex,realmlp,tabicl,tabpfn]==1.5.0",
    "datasphere>=0.10.0",
    "docutils==0.21.2",
    "imbalanced-learn==0.14.1",
    "matplotlib==3.7.5",
    "numpy==1.26.0",
    "openml==0.14.2",
    "pandas==2.2.3",
    "pytest==8.3.5",
    "seaborn==0.13.2",
    "setuptools>=80.9.0",
    "torch>=2.2,<2.7",
    "tqdm==4.66.5",
    "h2o>=3.46.0.9",
    "loguru>=0.7.3",
    "polars==1.36.1",
    "install-jdk==1.1.0",
]

[global]
extra_index_url = "https://download.pytorch.org/whl/cpu"

